# tadsim_visual

./: CMakeLists.txt  README.md  package.xml
config/: image.rviz
include/: CameraFun.h  MemoryIO.h  config.h  config.h.in  sensor_raw.pb.h  txsim_messenger.h
msgs/: basic.proto  cameraobject.proto  carSystemState.proto  color.proto  control.proto  controlSim.proto  coordinatorService.proto  debugInfo.proto  detectedlane.proto  egoMapData.proto  environment.proto  freespace.proto  generate_cpp.sh  grading.proto  grading_custom.proto  grading_report.proto  header.proto  ibeoData.proto  image.proto  laneMarks.proto  localLocation.proto  location.proto  log2world_trigger.proto  mapRange.proto  obstacles.proto  osi_featuredata.proto  osi_gps.proto  osi_imu.proto  osi_roadmarking.proto  osi_sensorview.proto  osi_trafficlight.proto  osi_trafficsign.proto  parking_space.proto  planOutput.proto  planStatus.proto  planningState.proto  record.proto  regionBasic.proto  rmInternal.proto  scenario_info.proto  (+13 more)
src/: CameraFun.cc  MemoryIO.cc  main.cc  sensor_raw.pb.cc
